# libefp2

./: .gitignore  CMakeLists.txt  Doxyfile  EFP2.C  EFP2.h  README.md  compile.sh  cpp_compile.sh  module.sh  setup.sh
.github/workflows/: ci.yml
cmake/: FindTargetLAPACK.cmake  libefpConfig.cmake.in
efpmd/: CMakeLists.txt  README.md
efpmd/src/: cfg.c  common.c  common.h  efield.c  energy.c  gtest.c  main.c  opt.c  parse.c  state.h  torch.c  torch.h
efpmd/torch/: ANIModel.h  CMakeLists.txt  aev_scripted.pt  c_libtorch.cc  c_libtorch.h  prev_c_libtorch.cc  tst_torch.sh
fraglib/: ch2o_lj.efp  h2o-mm.efp  h2o_reduced.efp  h2o_satarupa.efp  nh3-mm.efp  tba_mm.efp  tip3p_mm.efp
installed/include/: efp.h
installed/lib64/pylibefp/: __init__.py  wrapper.py
installed/share/cmake/libefp/: libefpConfig.cmake  libefpConfigVersion.cmake  libefpTargets-C-release.cmake  libefpTargets-C.cmake  libefpTargets-exe-release.cmake  libefpTargets-exe.cmake
nnlib/: ANIMM.pt  ANIMM_custom.pt  custom_model_script.pt
python/: CMakeLists.txt  __init__.py  compile_python.sh  core.cc  wrapper.py
src/: efp.c  efp.h  elec.c  parse.c  pol.c  poldirect.c  private.h  terms.h  util.c
tests/: CMakeLists.txt  elec_tt.in  pairwise_0.in  pol_3a.in  pol_tt.in  print.in  reduced.in  symm_2.in  symm_2full.in  symm_2pw.in  symm_2pw.out.2  symm_2pw_printout.in  torch_1.be  torch_1.slrm  torch_LZ5.in  torch_ani.in  torch_efp_1.in  torch_efp_2.in  torch_elpot_1.in  torch_elpot_2.in  torch_mm_1.in  torch_mm_2.in  torch_w3b1-1.in  torch_w6b1-1.in  torch_w8b1-1.in  xx
tests/pytests/: systems.py  test_efpefp.py  test_libefp.py  test_opts.py  test_scf.py
